force-app/main/default/objects/Gest_o_de_Documentos__c/Gest_o_de_Documentos__c.object-meta.xml
<CustomObject>
    <description>Objeto destinado ao controle da qualidade quanto a revisão e renovação dos documenos</description>
    <label>Gestão de Documento</label>
    <nameField>
        <displayFormat>GD - {0000}</displayFormat>
        <label>Nome de Gestão de Documentos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestão de Documentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>