force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Data_de_criacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_criacao__c</fullName>
    <label>Data de criação</label>
    <type>Date</type>
</CustomField>