force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <label>Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ata de Reunião</fullName>
            </value>
            <value>
                <fullName>Auditoria de Acuracidade</fullName>
            </value>
            <value>
                <fullName>Checklist de Auditoria</fullName>
            </value>
            <value>
                <fullName>Checklist de Entrega e Recebimento</fullName>
            </value>
            <value>
                <fullName>Checkliste de Auditoria Estrutural Semanal</fullName>
            </value>
            <value>
                <fullName>Contrato de Demonstração e Empréstimo</fullName>
            </value>
            <value>
                <fullName>Contrato de Locação</fullName>
            </value>
            <value>
                <fullName>Ordem de Trabalho - Ordem de Serviço Emergencial</fullName>
            </value>
            <value>
                <fullName>Ordem de Trabalho - Registro de Atendimento</fullName>
            </value>
            <value>
                <fullName>Ordem de Trabalho - Registro de Base Instalada</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>Plano de Ação</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Registro de Avaliação de Fornecedores</fullName>
            </value>
            <value>
                <fullName>Registro de Demonstração e Locação</fullName>
            </value>
            <value>
                <fullName>Registro de Limpeza da Piscina</fullName>
            </value>
            <value>
                <fullName>Registro de Limpeza das Áreas</fullName>
            </value>
            <value>
                <fullName>Registro de Reclamação de Clientes</fullName>
            </value>
            <value>
                <fullName>Registro de Temperatura e Umidade</fullName>
            </value>
            <value>
                <fullName>Registro de Treinamento Corporativo</fullName>
            </value>
            <value>
                <fullName>Registro de Verificação de Manutenção</fullName>
            </value>
            <value>
                <fullName>Relatório de Ação Corretiva</fullName>
            </value>
            <value>
                <fullName>Relatório de Auditoria</fullName>
            </value>
            <value>
                <fullName>Relatório de Não Conformidade</fullName>
            </value>
            <value>
                <fullName>Termo de Uso de EPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>