force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC GO</fullName>
            </value>
            <value>
                <fullName>ABC MT</fullName>
            </value>
            <value>
                <fullName>ABC - SP</fullName>
            </value>
            <value>
                <fullName>ABC TO</fullName>
            </value>
            <value>
                <fullName>GDB</fullName>
            </value>
            <value>
                <fullName>HEALTH</fullName>
            </value>
            <value>
                <fullName>HOSPCOM GO</fullName>
            </value>
            <value>
                <fullName>HOSPCOM 153</fullName>
            </value>
            <value>
                <fullName>HOSPCOM DF</fullName>
            </value>
            <value>
                <fullName>HOSPCOM MT</fullName>
            </value>
            <value>
                <fullName>HOSPCOM SP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>