force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Empresa_pesquisa__c.field-meta.xml
<CustomField>
    <fullName>Empresa_pesquisa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gestão de Documentos</relationshipLabel>
    <relationshipName>Gest_o_de_Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>