force-app/main/default/objects/Gest_o_de_Documentos__c/fields/N_mero_de_Revis_o__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Revis_o__c</fullName>
    <label>Número de Revisão</label>
    <length>10</length>
    <type>Text</type>
</CustomField>