force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Revisao__c.field-meta.xml
<CustomField>
    <fullName>Revisao__c</fullName>
    <label>Revisão</label>
    <type>Date</type>
</CustomField>