force-app/main/default/objects/Gest_o_de_Documentos__c/fields/SISTEMA__c.field-meta.xml
<CustomField>
    <fullName>SISTEMA__c</fullName>
    <label>SISTEMA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>