force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EM ELABORAÇÃO</fullName>
            </value>
            <value>
                <fullName>EM APROVAÇÃO</fullName>
            </value>
            <value>
                <fullName>DESENVOLVIMENTO</fullName>
            </value>
            <value>
                <fullName>VIGENTE</fullName>
            </value>
            <value>
                <fullName>OBSOLETO</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>