force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Status_do_prazo_do_documento__c.field-meta.xml
<CustomField>
    <fullName>Status_do_prazo_do_documento__c</fullName>
    <formula>IF(Prazo_para_o_vencimento__c &lt; TODAY() , &apos;VENCIDO&apos;,&apos;DENTRO DO PRAZO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status do prazo do documento</label>
    <type>Text</type>
</CustomField>