force-app/main/default/objects/Gest_o_de_Documentos__c/fields/Vigente__c.field-meta.xml
<CustomField>
    <fullName>Vigente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vigente</label>
    <referenceTo>Gest_o_de_Documentos__c</referenceTo>
    <relationshipLabel>Gestão de Documentos</relationshipLabel>
    <relationshipName>Gest_o_de_Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>