force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Checklist_de_Auditoria.recordType-meta.xml
<RecordType>
    <fullName>Checklist_de_Auditoria</fullName>
    <active>false</active>
    <label>Checklist de Auditoria</label>
</RecordType>