force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Checklist_de_Entrega_e_Recebimento.recordType-meta.xml
<RecordType>
    <fullName>Checklist_de_Entrega_e_Recebimento</fullName>
    <active>false</active>
    <label>Checklist de Entrega e Recebimento</label>
</RecordType>