force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Contrato_de_Demonstra_o_e_Empr_stimo.recordType-meta.xml
<RecordType>
    <fullName>Contrato_de_Demonstra_o_e_Empr_stimo</fullName>
    <active>false</active>
    <label>Contrato de Demonstração e Empréstimo</label>
</RecordType>