force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Contrato_de_Loca_o.recordType-meta.xml
<RecordType>
    <fullName>Contrato_de_Loca_o</fullName>
    <active>false</active>
    <label>Contrato de Locação</label>
</RecordType>