force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Ordem_de_trabalho.recordType-meta.xml
<RecordType>
    <fullName>Ordem_de_trabalho</fullName>
    <active>false</active>
    <label>Ordem de trabalho</label>
</RecordType>