force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/PAC.recordType-meta.xml
<RecordType>
    <fullName>PAC</fullName>
    <active>false</active>
    <label>PAC</label>
</RecordType>