force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Padr_o.recordType-meta.xml
<RecordType>
    <fullName>Padr_o</fullName>
    <active>true</active>
    <label>Padrão Novo</label>
</RecordType>