force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Padrao.recordType-meta.xml
<RecordType>
    <fullName>Padrao</fullName>
    <active>false</active>
    <label>Padrão</label>
</RecordType>