force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/PMP.recordType-meta.xml
<RecordType>
    <fullName>PMP</fullName>
    <active>false</active>
    <label>PMP</label>
</RecordType>