force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Registro_de_Demonstra_o_e_Empr_stimo.recordType-meta.xml
<RecordType>
    <fullName>Registro_de_Demonstra_o_e_Empr_stimo</fullName>
    <active>false</active>
    <label>Registro de Demonstração e Empréstimo</label>
</RecordType>