force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Registro_de_Temperatura_e_Umidade.recordType-meta.xml
<RecordType>
    <fullName>Registro_de_Temperatura_e_Umidade</fullName>
    <active>false</active>
    <label>Registro de Temperatura e Umidade</label>
</RecordType>