force-app/main/default/objects/Gest_o_de_Documentos__c/recordTypes/Relat_rio_de_A_o_Corretiva.recordType-meta.xml
<RecordType>
    <fullName>Relat_rio_de_A_o_Corretiva</fullName>
    <active>false</active>
    <label>Relatório de Ação Corretiva</label>
</RecordType>