force-app/main/default/objects/Gest_o_de_Documentos__c/listViews/ABC_TO.listView-meta.xml
<ListView>
    <fullName>ABC_TO</fullName>
    <columns>NAME</columns>
    <columns>Documento__c</columns>
    <columns>Data_de_criacao__c</columns>
    <columns>Revisao__c</columns>
    <columns>Status__c</columns>
    <columns>SISTEMA__c</columns>
    <columns>Empresa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Empresa__c</field>
        <operation>equals</operation>
        <value>ABC - SP</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>VIGENTE</value>
    </filters>
    <label>ABC - TO</label>
</ListView>