force-app/main/default/objects/Gest_o_de_Documentos__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Documento__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Revisao__c</columns>
    <columns>SISTEMA__c</columns>
    <columns>Empresa_pesquisa__c</columns>
    <columns>Empresa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Gest_o_de_Documentos__c.Padr_o</value>
    </filters>
    <label>Todos</label>
</ListView>